<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/incomeTaxCalculationFragment"
    tools:ignore="InvalidNavigation,UnusedNavigation">

    <fragment
        android:id="@+id/incomeTaxCalculationFragment"
        android:name="com.d.khmerincometax.IncomeTaxCalculatorFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_income_tax_calculation" >
        <action
            android:id="@+id/action_titleFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_titleFragment_to_rulesFragment"
            app:destination="@id/rulesFragment" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.d.khmerincometax.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.d.khmerincometax.RulesFragment"
        android:label="@string/rules"
        tools:layout="@layout/fragment_rules" />
</navigation>